<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.ahmedalaa.Honestly.SearchFragment">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <SearchView
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00897B"
            android:queryHint="@string/search_hint">

        </SearchView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/user_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/user_item"

            />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/no_users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"

        android:visibility="gone">


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center"
            android:contentDescription="@string/sad_face"

            android:tint="#444"
            app:srcCompat="@drawable/ic_sentiment_dissatisfied_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_users_found"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="#444"
            android:textStyle="bold" />

    </LinearLayout>
</FrameLayout>
