<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ahmedalaa.thetruth.ForgetPasswordActivity"
    tools:showIn="@layout/activity_forget_password"

    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="31dp"
            android:contentDescription="@string/honesty_logo_description"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/email_txt"
            style="@style/AuthTxtTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/_30sdp"
            android:ems="10"
            android:hint="@string/email_placeHolder"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/send_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_txt"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="36dp"
            android:background="@color/colorPrimary"
            android:drawablePadding="@dimen/_5sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:paddingStart="@dimen/_15sdp"
            android:text="@string/send_me_password_btn"
            android:textAllCaps="false"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="#ddd" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center"
        android:visibility="gone" />
</FrameLayout>