<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_16sdp"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardElevation="@dimen/_6sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/_5sdp" />

        <TextView
            android:id="@+id/msgs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/date"
            android:padding="@dimen/_5sdp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="#000" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/msgs"
            android:layout_margin="@dimen/_5sdp">

            <ImageButton
                android:id="@+id/replay"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_5sdp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/replay_to_messages_btn_desc"
                android:tint="@color/cardview_dark_background"
                app:srcCompat="@drawable/ic_login" />

            <ImageButton
                android:id="@+id/share"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_5sdp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/share_feedback"
                android:tint="@color/cardview_dark_background"
                app:srcCompat="@drawable/ic_share_black" />

            <ImageButton
                android:id="@+id/react"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_5sdp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/react_btn_desc"
                android:tint="@color/cardview_dark_background"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_insert_emoticon_black" />
        </LinearLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>